--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["belst <git@bel.st>"]
 
 [dependencies]
 actix = "0.5"
-actix-web = "0.6"
+actix-web = { version = "0.6", features = ["alpn"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
